# ncore

./: .bazelignore  .bazelrc  .cog.toml  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIU_TASK.md  MODULE.bazel  pyproject.toml
.github/actions/setup-bazel/: action.yml
.github/workflows/: ci.yml  commit-lint.yml
bazel/format/: ruff_isort.sh
bazel/lint/: BUILD.bazel  linters.bzl
bazel/sphinx/: BUILD.bazel
bug_reports/: 2026-06-10-structured-lidar-azimuth-span-overflow.md
docs/conversions/waymo/: waymo.rst
docs/data/: formats.rst
docs/tools/: ncore_vis.rst
ncore/data/: __init__.py
ncore/impl/common/: BUILD.bazel  transformations.py  transformations_test.py
ncore/impl/data/: BUILD.bazel  compat.py  stores.py  stores_test.py  types.py  util.py  util_test.py
ncore/impl/data/v4/: compat.py  compat_test.py  components.py  components_test.py  types.py
ncore/impl/sensors/: BUILD.bazel  camera.py  camera_test.py  common.py  lidar.py  lidar_test.py  rolling_shutter_test.py
tools/data_converter/: README.md  structured_lidar_model.py  structured_lidar_model_test.py
tools/data_converter/colmap/: converter.py
tools/data_converter/man_truckscenes/: BUILD.bazel  README.md  convert_one_scene.sh  convert_scene_by_scene.sh  converter.py  converter_test.py  main.py  project_lidar_to_cameras.sh  utils.py  visualize_scene.sh
tools/data_converter/nuscenes/: README.md  convert_scene_by_scene.sh  converter.py  project_lidar_to_cameras.sh  test_failed_scenes.sh  visualize_scene.sh
tools/data_converter/pai/: BUILD.bazel  converter.py  data_provider.py
tools/data_converter/truckdrive/: BUILD.bazel  README.md  convert_one_scene.sh  convert_scene_by_scene.sh  converter.py  converter_test.py  main.py  project_lidar_to_cameras.sh  utils.py  visualize_scene.sh
tools/data_converter/truckdrive/truckdrive-devkit/: organize_folder.md
tools/data_converter/waymo/: BUILD.bazel  converter.py  deps.py  waymo_range_image_utils.py
tools/ncore_vis/: BUILD.bazel  cli.py  data_loader.py  tracks_test.py  utils.py
tools/ncore_vis/components/: base.py  camera.py
