# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

# Vendored MAN TruckScenes devkit (the `truckscenes` package, a nuScenes-devkit fork).
# Third-party source: excluded from linting/type-checking via the no-lint tag. The
# `imports` attribute puts the devkit src root on PYTHONPATH so `import truckscenes` works.
py_library(
    name = "pylib_devkit",
    srcs = glob(["man-truckscenes-devkit/src/truckscenes/**/*.py"]),
    imports = ["man-truckscenes-devkit/src"],
    tags = ["no-lint"],
    deps = [
        requirement("numpy"),
        requirement("pyquaternion"),
        requirement("pypcd4"),
    ],
)

# TruckScenes-specific utilities: sensor maps, category map, DB-access helpers.
py_library(
    name = "pylib_utils",
    srcs = ["utils.py"],
    deps = [
        ":pylib_devkit",
    ],
)

# Converter library (config, converter class, CLI registration).
py_library(
    name = "pylib",
    srcs = ["converter.py"],
    deps = [
        ":pylib_devkit",
        ":pylib_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("pyquaternion"),
        requirement("tqdm"),
        requirement("universal_pathlib"),
        "//ncore:pylib",
        "//tools/data_converter:pylib_cli",
    ],
)

# Standalone CLI binary.
py_binary(
    name = "convert",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":pylib"],
)

alias(
    name = "man_truckscenes",
    actual = ":convert",
)

# Integration test for the MAN TruckScenes converter (requires MAN_TRUCKSCENES_DIR env var).
pytest_test(
    name = "pytest_converter",
    srcs = ["converter_test.py"],
    python_versions = ["3.11"],
    tags = ["manual"],  # Only run when explicitly requested (needs external data)
    deps = [
        ":pylib",
        ":pylib_devkit",
        ":pylib_utils",
        requirement("numpy"),
        requirement("parameterized"),
        requirement("pyquaternion"),
        requirement("universal_pathlib"),
        "//ncore:pylib",
    ],
)
