# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//bazel/pytest:defs.bzl", "pytest_test")

# TruckDrive-specific utilities: sensor maps, tf-tree graph, trajectory + .bin readers,
# class mapping. Self-contained (numpy + pyquaternion only); the devkit is NOT a runtime
# dependency. The class map is read at runtime from the vendored metainfo.json (data dep).
py_library(
    name = "pylib_utils",
    srcs = ["utils.py"],
    data = ["truckdrive-devkit/metainfo.json"],
    deps = [
        requirement("numpy"),
        requirement("pyquaternion"),
    ],
)

# Converter library (config, converter class, CLI registration).
py_library(
    name = "pylib",
    srcs = ["converter.py"],
    deps = [
        ":pylib_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("tqdm"),
        requirement("universal_pathlib"),
        "//ncore:pylib",
        "//tools/data_converter:pylib_cli",
    ],
)

# Standalone CLI binary.
py_binary(
    name = "convert",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":pylib"],
)

alias(
    name = "truckdrive",
    actual = ":convert",
)

# Integration test for the TruckDrive converter (requires TRUCKDRIVE_DIR env var).
pytest_test(
    name = "pytest_converter",
    srcs = ["converter_test.py"],
    python_versions = ["3.11"],
    tags = ["manual"],  # Only run when explicitly requested (needs external data)
    deps = [
        ":pylib",
        ":pylib_utils",
        requirement("numpy"),
        requirement("parameterized"),
        requirement("universal_pathlib"),
        "//ncore:pylib",
    ],
)
